# hmdl

./: .gitignore  Cargo.toml  README.md  build.rs  daemon.plist
.github/workflows/: build-and-deploy.yaml
hearthstone-frontend/: package-lock.json  package.json
hearthstone-frontend/src/: App.css  App.js  Domains.js  NavigationSystem.js  Requests.js  Timestamp.js
hearthstone-frontend/src/clients/: Clients.js
hearthstone-frontend/src/domains/: Domains.js  UnconfiguredDomain.js
hearthstone-frontend/src/groups/: AddGroup.js  AssignGroup.js  GroupRow.js  Groups.js
hearthstone-frontend/src/utility/: AxiosContext.js  AxiosContextProvider.js  AxiosInstanceProvider.js  UseAxios.js
heimdall-db/: Cargo.toml  build.rs
heimdall-db/migrations/: 20220703_TableKnownDomains.sql
heimdall-frontend/: Cargo.toml  package-lock.json
heimdall-frontend/public/: manifest.json
heimdall-frontend/src/domains/: DomainRow.js
heimdall-frontend/src/groups/: AddGroup.js
heimdall-frontend/src/utility/: Timestamp.js
heimdall-server/: Cargo.toml  build.rs
heimdall-server/src/: db.rs  dns.rs  main.rs  web.rs
heimdall-server/src/dns/: dns_server.rs
heimdall-server/src/web/: admin_server.rs  groups.rs  health.rs
hmdl-db/: Cargo.toml  build.rs
hmdl-db/migrations/: 20220701_TableClients.sql  20220702_TableClientGroup.sql  20220702_TableClientGroups.sql  20220703_TableDomainGroup.sql  20220703_TableDomainGroups.sql  20220704_TableClientGroupMember.sql  20220705_TableDomainGroupMember.sql  20220707_TableGroupsApplied.sql  20220724_TableSettings.sql  20220726_TableAcmePersist.sql
hmdl-db/src/: lib.rs
hmdl-db/src/dao/: users.rs
hmdl-frontend/: .eslintrc.js  .eslintrc.js.bak  Cargo.toml  build.rs  package-lock.json  package.json
hmdl-frontend/public/: index.html  manifest.json
hmdl-frontend/src/: App.js  App.tsx  NavigationSystem.js
hmdl-frontend/src/client_groups/: AddClientGroup.js  AddClientGroup.tsx  AddDomainGroupToClient.js  AddDomainGroupToClient.tsx  ClientGroup.js  ClientGroup.tsx  ClientGroupRow.js  ClientGroups.js  ClientGroups.tsx  ClientOfGroup.js  DomainGroupApplied.js
hmdl-frontend/src/clients/: ClientRow.js  Clients.js
hmdl-frontend/src/domain_groups/: AddDomainGroup.js  DomainGroup.js  DomainGroup.tsx  DomainGroupRow.js  DomainGroups.js  DomainGroups.tsx  DomainOfGroup.js
hmdl-frontend/src/domains/: DomainRow.js  Domains.tsx
hmdl-frontend/src/groups/: DomainOfGroup.js  GroupRow.js  Groups.js
hmdl-frontend/src/users/: UserRow.js  Users.js
hmdl-frontend/src/utility/: Timestamp.js  Timestamp.tsx  health.js  health.tsx  layout.js  layout.tsx
hmdl-frontend/src/utility/authentication/: AuthenticationForm.js  AuthenticationProvider.js  AuthenticationProvider.tsx  LoginButton.js  LoginButton.tsx  RegisterButton.js
hmdl-frontend/src/utility/setup/: post-setup.js  post-setup.tsx  pre-setup.js
hmdl-frontend/src/utility/toaster/: Toast.css  ToastComponent.js  ToastComponent.tsx  ToastHolder.js  ToastHolder.tsx  ToastProvider.js  ToastProvider.tsx  ToastStatus.ts  ToastType.ts
hmdl-server/: Cargo.toml  build.rs
hmdl-server/src/: certificate.rs  coordinator.rs  dhcp.rs  dns.rs  main.rs  web.rs
hmdl-server/src/certificate/: acme_persist_key.rs  cert_manager.rs  cloudflare_client.rs  cloudflare_setup.rs
hmdl-server/src/coordinator/: acme_provision_service.rs  cloudflare_a_service.rs  hmdl_server_trait.rs  installation_status_service.rs  ip_provider_service.rs
hmdl-server/src/db/: database_queries.rs
hmdl-server/src/dhcp/: unused_ip.rs
hmdl-server/src/dns/: arp_lookup.rs  decider.rs  dns_server.rs  filtering_fowarder.rs
hmdl-server/src/web/: admin_server.rs  dev_frontend.rs  endpoints.rs  frontend.rs  install_endpoints.rs  util.rs
hmdl-server/src/web/endpoints/: authentication.rs  client_groups.rs  clients.rs  domain_groups.rs  domains.rs  groups_applied.rs  health.rs  setup.rs  users.rs
hmdl-server/src/web/install_endpoints/: setup.rs
hmdl-server/src/web/util/: api_context.rs  api_error.rs  authorization_check.rs  jwe_service.rs
migrations/: 20220626_TableKnownDomains.sql  20220702_TableGroups.sql  20220705_TableDomainGroupMember.sql
src/: db.rs  dns.rs  lib.rs  main.rs  web.rs
src/db/: database_handle.rs  database_queries.rs
src/dns/: arp_lookup.rs  dns_server.rs  filtering_fowarder.rs
src/web/: admin_server.rs  api_context.rs  api_error.rs  domains.rs  frontend.rs  groups.rs
