[package]
name = "hearthstone-server"
description = "A filtering DNS server to limit children from bypassing parental blocks"
version = "0.1.0"
edition = "2021"

[lib]
name = "hearthstonelib"
path = "src/lib.rs"

[[bin]]
name = "hearthstone-server"
path = "src/main.rs"

[build-dependencies]
npm_rs = "0.2.1"

[dependencies]
#Web server
axum = "0.5.7"
#webauthn-rs = "0.3.2"
futures = "0.3.21"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#Frontend
rust-embed = "6.4.0"
mime_guess = "2.0.4"

#Embed git version in build
git-version = "0.3.5"

#Network Services
#trust-dns-server = { version = "0.21.2", features = ["resolver"] }
trust-dns-server = { git = "https://github.com/chotchki/trust-dns.git", branch = "patch-1", features = [
  "resolver",
] }
#trust-dns-resolver = { git = "https://github.com/chotchki/trust-dns.git", branch = "patch-1" }
async-trait = "0.1.56"
dhcp4r = "0.2.3"

#Save Data
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
