[package]
name = "hmdl-db"
description = "The embedded database for hmdl"
version = "0.1.0"
edition = "2021"
links = "hmdldb"

[build-dependencies]
sqlx = { version = "0.6.0", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio = { version = "1.0", features = ["full"] }

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.6.0", features = [
    "chrono",
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }
