[package]
name = "hmdl-db"
description = "The embedded database for hmdl"
version = "0.1.0"
edition = "2021"
links = "hmdldb"

[build-dependencies]
sqlx = { version = "0.6.0", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio = { version = "1.0", features = ["full"] }

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.143"
serde_json = "1.0"
sqlx = { version = "0.6.0", features = [
    "chrono",
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
uuid = "1.1.2"
webauthn-rs = { version = "0.4.3", features = [
    "danger-allow-state-serialisation",
] }
