[package]
name = "hmdl"
description = "A filtering DNS server to limit children from bypassing parental blocks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hmdl"
path = "src/main.rs"

[dependencies]
hmdl-db = { path = "../hmdl-db" }
hmdl-frontend = { path = "../hmdl-frontend" }

#Basic Rust
anyhow = "1.0.58"
git-version = "0.3.5"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"

#Web server
axum = { version = "0.5.7", features = ["headers"] }
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
axum-sessions = "0.3.1"
console-subscriber = "0.1.5"
futures = "0.3.21"
futures-util = "0.3.21"
hyper = "0.14.19"
ring = { version = "0.16.20", features = ["std"] }
rustls = "0.20.6"
serde = "1.0.143"
tokio = { version = "1.0", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.1.2"
url = "2.2.2"
webauthn-rs = { version = "0.4.3", features = [
    "danger-allow-state-serialisation",
] }


#React Frontend
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }
mime_guess = "2.0.4"

#Network Services
#trust-dns-server = { version = "0.21.2", features = ["resolver"] }
trust-dns-server = { git = "https://github.com/chotchki/trust-dns.git", branch = "patch-1", features = [
    "resolver",
] }
async-trait = "0.1.56"
dhcp4r = "0.2.3"
nom = "7.1.1"

#Database Work with required async
async-recursion = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.6.0", features = [
    "chrono",
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }

#Certificates
acme-lib = "0.8.2"
cloudflare = "0.9.1"
local-ip-address = "0.4.5"

#Machine Learning
#smartcore
